--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,9 @@
-spring.datasource.url: jdbc:mysql://localhost:3306/todolist?useSSL=false&amp&serverTimezone=UTC
+spring.datasource.url: jdbc:mysql://localhost:3306/blog-engine?useSSL=false&amp&serverTimezone=UTC
 spring.datasource.driver-class-name: com.mysql.jdbc.Driver
 spring.jpa.database-platform: org.hibernate.dialect.MySQL5Dialect
 spring.datasource.username: root
 spring.datasource.password: qweqwe
-spring.jpa.hibernate.ddl-auto: none
+spring.jpa.hibernate.ddl-auto: update
+spring:
+  jpa:
+    show-sql: true
