--- a/application.yml
+++ b/application.yml
@@ -1,9 +1,13 @@
-spring.datasource.url: jdbc:mysql://localhost:3306/blog-engine?useSSL=false&amp&serverTimezone=UTC
-spring.datasource.driver-class-name: com.mysql.jdbc.Driver
-spring.jpa.database-platform: org.hibernate.dialect.MySQL5Dialect
-spring.datasource.username: root
-spring.datasource.password: qweqwe
-spring.jpa.hibernate.ddl-auto: update
 spring:
   jpa:
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: true
+    hibernate:
+      ddl-auto: validate
+  datasource:
+    url: jdbc:mysql://localhost:3306/blog-engine?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&amp&serverTimezone=UTC
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: qweqwe
+  flyway:
+    baseline-on-migrate: true
