--- a/application.yml
+++ b/application.yml
@@ -11,3 +11,11 @@ spring:
     password: qweqwe
   flyway:
     baseline-on-migrate: true
+
+blog_engine:
+  title: DevPub
+  subtitle: Рассказы разработчиков
+  phone: +7 903 666-44-55
+  email: mail@mail.ru
+  copyright: Дмитрий Сергеев
+  copyrightFrom: 2005
