--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,18 @@
             <version>1.16.0</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- ==========CAPTCHA=================== -->
+        <dependency>
+            <groupId>com.github.cage</groupId>
+            <artifactId>cage</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
     </dependencies>
 
     <build>
