--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- ==========CAPTCHA=================== -->
+        <!--==========CAPTCHA===================-->
         <dependency>
             <groupId>com.github.cage</groupId>
             <artifactId>cage</artifactId>
@@ -124,6 +124,11 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.8.0</version>
+        </dependency>
+        <!--==========SECURITY===================-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
     </dependencies>
 
