--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-test -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+<!--            <version>5.5.2</version>-->
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
