--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,13 @@ spring:
     password: qweqwe
   flyway:
     baseline-on-migrate: true
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 10MB
 
-#logging:
+  #logging:
 #  level:
 #    org:
 #      springframework:
@@ -27,5 +32,6 @@ blog_engine:
   copyrightFrom: 2005
   additional:
     announceMaxLength: 150
-    uploadedMaxFileWeight: 100000
+    uploadedMaxFileWeight: 5242880 # TODO разделить файл для комментов и файл для профиля?
     commentMinLength: 3
+    passwordMinLength: 6
