--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+<!--            <version>2.3.4.RELEASE</version>-->
+        </dependency>
         <!--==========SECURITY===================-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
