--- a/src/main/resources/application-test-containers.yml
+++ b/src/main/resources/application-test-containers.yml
@@ -3,6 +3,17 @@ spring:
     show-sql: true
     properties:
       hibernate.format_sql: true
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: tyunyaevds@gmail.com
+    password: 
+    protocol: smtp
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
+      mail.debug: true
+      mail.smtp.timeout: 10000
 
 blog_engine:
   title: DevPub
