implemented post /api/auth/restore

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,6 +47,7 @@ blog_engine:
     passwordMinLength: 6
     profilePhotoWidth: 36
     profilePhotoHeight: 36
+    websiteHost: localhost
   cloudinary:
     cloudName: skillbox
     apiKey:
