--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
       ddl-auto: update
   datasource:
     url: jdbc:${JAWSDB_URL:mysql://localhost:3306/blog-engine?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&amp&serverTimezone=Europe/Moscow}
+    #url: jdbc:mysql://${DOCKER_HOST_IP:localhost}:3306/blog-engine?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&amp&serverTimezone=Europe/Moscow
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: qweqwe
@@ -24,7 +25,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: tyunyaevds@gmail.com
-    password: kspggftfqchbfgws
+    password: ${MAIL_SMTP_PASSWORD}
     protocol: smtp
     properties:
       mail.smtp.auth: true
@@ -51,5 +52,5 @@ blog_engine:
     websiteHost: dtyunyaev-skillbox-blog.herokuapp.com
   cloudinary:
     cloudName: skillbox
-    apiKey: 575285673499468
-    apiSecret: mZlWIlTniwVAjUbiOiwadRrZvTU
+    apiKey: ${CLOUDINARY_API_KEY}
+    apiSecret: ${CLOUDINARY_API_SECRET}
